<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Usuario.ResetPassActivity">

    <TextView
        android:id="@+id/tv_enter_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:autofillHints=""
        android:gravity="center"
        android:text="@string/ingrese_su_correo_para_restablecer"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:hint="@string/correo_electr_nico"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_email" />

    <Button
        android:id="@+id/btn_reset_request"
        android:layout_width="358dp"
        android:layout_height="63dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/solicitud_de_restablecimiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

</androidx.constraintlayout.widget.ConstraintLayout>